code/part1/thato-matima-VPC.yml
Parameters:
  EnvironmentName:
    Default: DE-Extract
  
  VpcCIDR:
    Default: 192.168.0.0/16

  DataCenterPublicSubnetCIDR:
    Default: 192.168.10.0/24

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDNSHostnames: true
      Tags:
        - Key: Name 
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  DataCenterPublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      AvailablilityZone: !Select [0, !GetAZs '!Ref AWS::Region']
      CidrBlock: !Ref DataCenterPublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: DE-Extract Data Center Subnet

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: DE-Extract Public Routes

  DefaultPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  DataCenterPublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref DataCenterPublicSubnet

  WindowsInstanceSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupName: DE-Extract-WindowsInstanceSG
      GroupDescription: Security group responsible for permitting remote desktop protocol access to an instance deployed within the public subnet of the VPC. 
      SecurityGroupIngress:
        CidrIp: 0.0.0.0/0
        FromPort: 3389
        ToPort: 3389
        IpProtocol: tcp
      Tags:
        - Key: Name
          Value: DE-Extract-WindowsInstanceSG

  FileServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupName: DE-Extract-FileServerSG
      GroupDescription: Security group responsible for permitting ssh access to the data center's file server from an internal source within the VPC. 
      SecurityGroupIngress:
        CidrIp: 192.168.10.0/24
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
      Tags: 
        - Key: Name
          Value: DE-Extract-FileServerSG

  FileGateWaySG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties: 
      VpcId: !Ref VPC
      GroupName: DE-Extract-FileGatewaySG
      GroupDescription: This security group controls the access to the file gateway instance.
      SecurityGroupIngress:
        CidrIp: 192.168.0.0/16
        FromPort: 1
        ToPort: 65534
        IpProtocol: tcp
      Tags:
        - Key: Name
          Value: DE-Extract-FileGatewaySG
